# test

./: README.md
5G/: DU_SF.h  DU_SH.h  TR098.h  TR181.h  TR262.h  TS38.331.h  main  main.c  makefile
5G/TR069/EasyCWMP/easycwmp-om/: CMakeLists.txt  tr069_cwmp_api.h
5G/TR069/EasyCWMP/easycwmp-om/om_rpc/: oid_register.c  rpc_register.c
5G/TR069/EasyCWMP/easycwmp-om/simu_om/: GetParameterNamesResponse.c  GetParameterValuesResponse.c  om_main.c
5G/TR069/EasyCWMP/easycwmp-om/src/: backup.c  basicauth.c  config.c  config.h  cwmp.c  cwmp.h  digestauth.c  easycwmp.c  easycwmp.h  easycwmp_time.h  external.c  external.h  http.c  http.h  json.c  log.c  log.h  time.c  ubus.c  xml.c
5G/TR069/EasyCWMP/easycwmp-om/src/.deps/: easycwmpd-backup.Po  easycwmpd-base64.Po  easycwmpd-basicauth.Po  easycwmpd-config.Po  easycwmpd-cwmp.Po  easycwmpd-digestauth.Po  easycwmpd-easycwmp.Po  easycwmpd-external.Po  easycwmpd-http.Po  easycwmpd-json.Po  easycwmpd-log.Po  easycwmpd-md5.Po  easycwmpd-time.Po  easycwmpd-ubus.Po  easycwmpd-xml.Po
HarmonyOS/: readme-gitrepo.md  readme-zh.gitrepo.md  readme.txt
ai/: mnist.html.txt
arm/: readme.txt  sourcery-G++-Lite.txt
assembler/: readme.txt  unistd_64.h
c/: .ISSET.c.swp  .test-ret.c.swp  16tofloat32.c  FDL.h  __WORDSIZE.c  __label__.c  __x86_64__.h  a.out  auto.c  bit.c  cas.cc  check_pid_exist.c  copyright.h  goto.c  int2bit.c  log_err-def.h  longlongint.c  main.c  mask.c  memshow.c  nested-function.c  override.c  tab.c  test-defun.c  test-pid.c  test-ret.c  test.c  volatile.c  while.c  while1.c  write-fd.c
c/args/: fn.c
c/daemon-AutoDaemon/: CMakeLists.txt  TODO  execute.c  execute.h  log.c  log.h  main.c  timer.c  timer.h  xml.c  xml.h
cmake/helloworld-cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello  hello.c  readme.txt
cmake/helloworld-cpp/src/: show.cc
cmake/helloworld-cpp/vos/: vos.cc  vos.h
cmake/jt_sran/: CMakeLists.txt
cmake/jt_sran/product_om/: om_main.c
cmake/jt_sran/product_om/cell_mgmt/: Makefile  copyright.sh
cmake/jt_sran/product_om/cell_mgmt/include/: cell_mgmt_api.h  vcm.h  vcm_alarm.h  vcm_cell_entity.h  vcm_config.h  vcm_db.h  vcm_errno.h  vcm_msgs.h  vcm_plugin.h  vcm_sm.h  vcm_sys_wrapper.h  vcm_tools.h  vcm_types.h
cmake/jt_sran/product_om/cell_mgmt/src/: vcm_cell.c  vcm_cell_delete.c  vcm_cell_setup.c  vcm_cell_stop.c  vcm_init.c  vcm_l1l2l3.c  vcm_module_register.c  vcm_sm.c  vcm_tools.c
cmake/jt_sran/product_om/inet_mgmt/include/: inet_mgmt.h  inet_mgmt_api.h  inet_mgmt_config.h  inet_mgmt_types.h
cmake/jt_sran/product_om/inet_mgmt/src/: inet_mgmt.c  inet_mgmt_socket_register.c
cmake/jt_sran/product_om/perf_mgmt/include/: perf_mgmt_api.h  perfs.h  perfs_cell_perf.h  perfs_config.h  perfs_l1l2l3_perf.h  perfs_msgs.h  perfs_sm.h  perfs_types.h
cmake/jt_sran/product_om/perf_mgmt/src/: perfs_handler.c  perfs_init.c  perfs_tools.c
cmake/jt_sran/vos/include/: vos_cli.h  vos_common.h  vos_ctype.h  vos_lib.h  vos_linklist.h  vos_module.h  vos_que.h  vos_sem.h  vos_string.h  vos_sys_diff.h  vos_sysmsg.h  vos_task.h  vos_timer.h  vos_types.h
cmake/study/lib.so/: CMakeLists.txt
cmake/study/lib.so/lib/: libadd.so.1
cmake/study/lib.so/src/: add.c  add.h
cmake/study/subdir/demo01/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake/study/subdir/demo01/src/: CMakeLists.txt
cmake/study/subdir/demo01/src/util/: Makefile  cmake_install.cmake  print.c
cmake/study/subdir/demo01/util/: Makefile
cmake/subdir/demo1/: CMakeLists.txt  main.c
cmake/subdir/demo1/cn/: CMakeLists.txt
cmake/subdir/demo1/cn/amf/: CMakeLists.txt  amf.c  amf.h
cmake/subdir/demo1/dim1/dim2/: CMakeLists.txt  dim.c
cmake/subdir/demo1/log/: CMakeLists.txt  log.c  log.h
cmake/subdir/demo1/log/assert/: CMakeLists.txt  as.h  assert.c
cmake/subdir/demo1/mme/: CMakeLists.txt  mme.c  mme.h
cmake/test/: CMakeLists.txt
cmdline/: readme-cli.txt
compile/: readme.txt
cpp/: class-ThreadExitException.h  main.cpp
doc/: 20200122.txt
dpdk/: lcore.txt  my_mem_virt2phy.c  pkg-handle.txt  quick-start-guide.txt  readme.md  rte.txt  rte_dump_stack.c
driver/: readme.txt
ffmpeg/: readme
fftw/: fftw3.h
fio/: fio.sh  fio_exam.fio  server_sim.fio
fs-filesystem/: readme.txt
fstack/: a.out  html.c
ftp/: readme.txt
gSOAP/: readme.txt
gcc/: static-exe.c
git/: clean  clean-completion.bash  git-completion.bash  git-log-3--stat.sh  git-show--stat.sh  proxy.txt  push-force.sh  readme.txt  remote.bash
glibc/: readme.txt
glic/: cd-glibc.sh
grub/: gengrub.sh  grub.cfg
hugepage/: hugepage-shm-memory-allocator.c  hugepage-shm.c  malloc.c
ipc/: O_XXX.txt  ip_invalid.c
java/: 100.java  FlappyBird.java  Main_linearRegression.java  MergeSort.java  Pinball.java  hello.java  main.java
json/: json-lib.c  json-lib.h
jvm/: readme.txt
kvm/: intro.txt
leetcode/: 3.lengthOfLongestSubstring.c  5.longestPalindrome.c  add-two-numbers.c
libconfigini/: test_1.c
libmemif/: readme.md
libumem/: usage.txt
liburing/: readme-aio.txt
libuv/: readme.txt
libvirt/: support.txt
libxml2/: addchild.c
license/: FDL-free-documentation-license.txt
lxc/: mount.sh
memcache/: readme.txt
memory/: getrusage.c  readme.txt  sysinfo.c
mempool/: readme.txt
netmap/: intro.1.txt  netmap-intro-blog.txt
nfs/: usage.txt
nic/: readme.txt
ninja/: TODO
openmp/: demo.c  main.c  omp.h
openssl/: openssl.man.txt
openvswitch/: readme.md
ovs/: readme.txt
posix/: readme.txt
programmer/: readme.md
proxy/: proxy-server-type.txt  proxy.type.txt
python/: crtl_sort.h  install.txt  main.py  rongtao.h  tablib-1.0.0-py3-none-any.whl
rabbitmq/: intro.txt
redis/: redis-cli.man.txt  redis-server.man.txt
regular-expression/: appear-times.txt  check-phone-number.sh  count-dir.sh
rocketmq/: rocketmq.txt
samba/: 7.166.conf  config
sdl/: readme
seismic/: readme
selinux/: config.sh
shell/: bash.txt  clean.sh  dir.sh  env.txt  kill.sh
socat/: readme.txt  socat.man.txt
spdk/: intro.txt
ssh/: sshfs.txt
tcp-ip/: readme.md
ui/x11/cwp/ximage_rt/: CMakeLists.txt  main.c
(+8141 files in other folders)
