cmake_minimum_required(VERSION 2.8)
project(jt_sran_5g)

aux_source_directory(src SRCS)

add_subdirectory(src src/util)

set(JT_SRAN_5G		jt_sran_5G)

set(JT_SRAN_CODE	clean.sh run.sh)
set(JT_SRAN_CONF	vos.conf hello.conf)
set(JT_SRAN_CONF_DIR	cfg_file)

add_executable(${JT_SRAN_5G} ${SRCS})

# install
set(JT_SRAN_INSTALL_PREFIX /home/jt_sran5G)
set(CMAKE_INSTALL_PREFIX ${JT_SRAN_INSTALL_PREFIX})

set(BIN_CUCP	cucp)
set(BIN_CUUP	cuup)
set(BIN_DU		du)

install(TARGETS ${JT_SRAN_5G} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${BIN_CUCP})
install(TARGETS ${JT_SRAN_5G} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${BIN_CUUP})
install(TARGETS ${JT_SRAN_5G} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${BIN_DU})

install(PROGRAMS ${JT_SRAN_CODE} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${BIN_CUCP})
install(PROGRAMS ${JT_SRAN_CODE} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${BIN_CUUP})
install(PROGRAMS ${JT_SRAN_CODE} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${BIN_DU})

install(FILES ${JT_SRAN_CONF} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${BIN_CUCP})
install(FILES ${JT_SRAN_CONF} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${BIN_CUUP})
install(FILES ${JT_SRAN_CONF} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${BIN_DU})

install(DIRECTORY ${JT_SRAN_CONF_DIR} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${BIN_CUCP})
install(DIRECTORY ${JT_SRAN_CONF_DIR} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${BIN_CUUP})
install(DIRECTORY ${JT_SRAN_CONF_DIR} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${BIN_DU})

